--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "sequelize": "sequelize",
     "sequelize-cli": "sequelize-cli",
     "start": "per-env",
-    "start:development": "npx dotenv sequelize db:migrate:undo:all && npm run migrate && npm run seed && nodemon ./bin/www",
+    "start:development": "nodemon ./bin/www",
     "start:production": "node ./bin/www",
     "build": "node psql-setup-script.js",
     "migrate":"npx dotenv sequelize-cli db:migrate",
