--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
     "start": "per-env",
     "start:development": "nodemon ./bin/www",
     "start:production": "node ./bin/www",
-    "build": "node psql-setup-script.js"
+    "build": "node psql-setup-script.js",
+    "migrate":"npx dotenv sequelize-cli db:migrate",
+    "seed":"npx dotenv sequelize-cli db:seed:all"
   },
   "keywords": [],
   "author": "ilazarkov@gmail.com",
