--- a/package.json
+++ b/package.json
@@ -30,5 +30,11 @@
   "bugs": {
     "url": "https://github.com/IhorLazarkov/FronoPizza/issues"
   },
-  "homepage": "https://github.com/IhorLazarkov/FronoPizza#readme"
+  "homepage": "https://github.com/IhorLazarkov/FronoPizza#readme",
+  "devDependencies": {
+    "redux-logger": "^3.0.6"
+  },
+  "dependencies": {
+    "react-icons": "^5.5.0"
+  }
 }
