--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "redux-logger": "^3.0.6"
   },
   "dependencies": {
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "websocket": "^1.0.35"
   }
 }
