--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   },
   "homepage": "https://github.com/IhorLazarkov/FronoPizza#readme",
   "devDependencies": {
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "vite": "^6.3.4"
   },
   "dependencies": {
     "react-icons": "^5.5.0",
